--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,43 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Complaint Login</title>
+  <title>Login - Complaint Portal</title>
   <style>
-    body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background: #f3f3f3; }
-    .login-box { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); width: 320px; }
-    input, button { width: 100%; padding: 10px; margin: 10px 0; }
-    button { background: #4CAF50; color: white; border: none; cursor: pointer; }
-    button:hover { background: #45a049; }
+    body { font-family: sans-serif; background: #f5f5f5; }
+    .box { width: 300px; margin: 100px auto; padding: 30px; background: white; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    input, button { width: 100%; padding: 10px; margin-top: 10px; border-radius: 6px; border: 1px solid #ccc; }
+    button { background: #007bff; color: white; font-weight: bold; border: none; }
+    button:hover { background: #0056b3; cursor: pointer; }
+    .switch { text-align: center; margin-top: 15px; color: #007bff; cursor: pointer; }
   </style>
 </head>
 <body>
-  <div class="login-box">
+  <div class="box" id="loginBox">
     <h2>Login</h2>
-    <input type="text" id="username" placeholder="Username" />
-    <input type="password" id="password" placeholder="Password" />
+    <input type="text" id="loginUser" placeholder="Username" />
+    <input type="password" id="loginPass" placeholder="Password" />
     <button onclick="login()">Login</button>
-    <p id="message" style="color:red;"></p>
+    <div class="switch" onclick="showRegister()">Don't have an account? Register</div>
+  </div>
+
+  <div class="box" id="registerBox" style="display:none;">
+    <h2>Register</h2>
+    <input type="text" id="regUser" placeholder="Username" />
+    <input type="password" id="regPass" placeholder="Password" />
+    <button onclick="register()">Register</button>
+    <div class="switch" onclick="showLogin()">Already have an account? Login</div>
   </div>
 
   <script>
-    async function login() {
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
+    function showRegister() {
+      document.getElementById('loginBox').style.display = 'none';
+      document.getElementById('registerBox').style.display = 'block';
+    }
+    function showLogin() {
+      document.getElementById('registerBox').style.display = 'none';
+      document.getElementById('loginBox').style.display = 'block';
+    }
 
-      const res = await fetch('http://localhost:5000/api/users/login', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ username, password }),
-      });
+    function register() {
+      const user = document.getElementById('regUser').value;
+      const pass = document.getElementById('regPass').value;
+      localStorage.setItem(user, pass);
+      alert("Registered successfully!");
+      showLogin();
+    }
 
-      const data = await res.json();
-      if (res.ok) {
-        localStorage.setItem('token', data.token);
-        localStorage.setItem('role', data.user.role);
-        window.location.href = 'dashboard.html';
+    function login() {
+      const user = document.getElementById('loginUser').value;
+      const pass = document.getElementById('loginPass').value;
+      if (localStorage.getItem(user) === pass) {
+        localStorage.setItem("loggedInUser", user);
+        window.location.href = "dashboard.html";
       } else {
-        document.getElementById('message').innerText = data.message || 'Login failed';
+        alert("Invalid credentials");
       }
     }
   </script>
